# kokoro_ft

./: .env.example  .gitignore  README.md  gradio_app.py  kokoro_nepali_tts_colab.ipynb  main.py  pyproject.toml  text_normalizer.py
configs/: stage1.yaml  stage2.yaml
data/: phoneme_vocab.json
data/manifests/: phoneme_samples.txt  stats.json  val.jsonl  val.txt
kikiri-tts/StyleTTS2/: kokoro_tb_utils.py  meldataset.py  train_first.py  train_second.py
kikiri-tts/StyleTTS2/monotonic_align/: __init__.py  core.c  core1alt.c  core2.c  core2eps.c
scratch/: test_recursive_g2p.py
scripts/: 01_inspect_dataset.py  02_prepare_manifests.py  03_phonemize.py  04_validate_phonemes.py  generate_eval_samples.py  push_via_datasets.py  run_pipeline.sh  test_nepali.py  train_stage1.sh  train_stage2.sh  upload_checkpoints_to_hf.py
