[project]
name = "kokoro-ft"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "soundfile>=0.12",
    "librosa>=0.10",
    "phonemizer>=3.2",
    "wandb>=0.17",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "kokoro-deutsch",
    "cython>=3.2.8",
    "torchcodec>=0.15.0",
    "munch>=4.0.0",
    "accelerate>=1.14.0",
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "matplotlib>=3.11.0",
    "tensorboard>=2.21.0",
    "gradio>=6.20.0",
    "nepali-g2p>=0.1.0",
    "aksharamukha>=2.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
kokoro-deutsch = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.workspace]
members = [
    "kikiri-tts",
]
